--- a/src/main/resources/templates/documents/document-externaldispatches.html
+++ b/src/main/resources/templates/documents/document-externaldispatches.html
@@ -15,38 +15,38 @@
 </head>
 <body>
 <div class="container">
-    <a th:href="@{'/documents/showDocumentInfo/' + ${id}}">Back to Document info</a>
+    <a th:href="@{'/documents/showDocumentInfo/' + ${id}}" th:text="#{backToDocumentInfo}">Back to Document info</a>
 
     <br><br>
 
-    <h3>Document Directory</h3>
+    <h3 th:text="#{documentDirectory}">Document Directory</h3>
 
     <hr>
 
-    <p class="h4 mb-3" th:text="${document.decimalNumber} + ' external dispatches'"></p>
+    <p class="h4 mb-3" th:text="${document.decimalNumber} + ' ' + #{document.externaldispatches.section.externalDispatches}"></p>
 
     <div th:if="${document.externalDispatches == null || document.externalDispatches.size() == 0}">
-        <h6>No external dispatches</h6>
+        <h6 th:text="#{noExternalDispatches}">No external dispatches</h6>
     </div>
 
     <div th:if="${document.externalDispatches != null && document.externalDispatches.size() != 0}">
         <table class="table table-bordered table-hover">
             <thead class="thead-dark text-center">
                 <tr>
-                    <th class="align-middle">Company</th>
-                    <th class="align-middle">Status</th>
-                    <th class="align-middle">Active</th>
-                    <th class="align-middle">Dispatch date</th>
-                    <th class="align-middle">Letter outgoing number</th>
-                    <th class="align-middle">Waybill</th>
-                    <th class="align-middle">Action</th>
+                    <th class="align-middle" th:text="#{company}">Company</th>
+                    <th class="align-middle" th:text="#{status}">Status</th>
+                    <th class="align-middle" th:text="#{active}">Active</th>
+                    <th class="align-middle" th:text="#{dispatchDate}">Dispatch date</th>
+                    <th class="align-middle" th:text="#{letterOutgoingNumber}">Letter outgoing number</th>
+                    <th class="align-middle" th:text="#{waybill}">Waybill</th>
+                    <th class="align-middle" th:text="#{action}">Action</th>
                 </tr>
             </thead>
             <tbody>
                 <tr th:each="tempExternal : ${document.externalDispatches}" th:class="${tempExternal.value} ? 'table-default' : 'table-danger'">
                     <td class="align-middle text-center" th:text="${tempExternal.key.company.name}"></td>
-                    <td class="align-middle text-center" th:text="${tempExternal.key.status.name}"></td>
-                    <td class="align-middle text-center" th:text="${tempExternal.value}"></td>
+                    <td class="align-middle text-center" th:text="#{${'status.' + tempExternal.key.status}}"></td>
+                    <td class="align-middle text-center" th:text="#{${'active.' + tempExternal.value}}"></td>
                     <td class="align-middle text-center" th:text="${tempExternal.key.dispatchDate}"></td>
                     <td class="align-middle text-center">
                         <a th:href="@{'/externaldispatches/showExternalDispatchInfo/' + ${tempExternal.key.id}}" th:text="${tempExternal.key.letterOutgoingNumber}"></a>
@@ -54,9 +54,9 @@
                     <td class="align-middle text-center" th:text="${tempExternal.key.waybill}"></td>
                     <td class="align-middle text-center">
                         <a class="btn btn-sm btn-outline-danger mr-2" th:if="${tempExternal.value}"
-                           th:href="@{'/documents/deregisterExternal/' + ${id} + '/' + ${tempExternal.key.id}}" onclick="if (!(confirm('Are you sure?'))) return false">Deregister</a>
+                           th:href="@{'/documents/deregisterExternal/' + ${id} + '/' + ${tempExternal.key.id}}" onclick="if (!(confirm('Are you sure?'))) return false" th:text="#{deregister}">Deregister</a>
                         <a class="btn btn-sm btn-outline-danger" th:if="${tempExternal.value}"
-                           th:href="@{'/documents/deregisterExternalWithIncomings/' + ${id} + '/' + ${tempExternal.key.id}}" onclick="if (!(confirm('Are you sure?'))) return false">Dereg. with inc.</a>
+                           th:href="@{'/documents/deregisterExternalWithIncomings/' + ${id} + '/' + ${tempExternal.key.id}}" onclick="if (!(confirm('Are you sure?'))) return false" th:text="#{deregisterWithIncomings}">Dereg. with inc.</a>
                     </td>
                 </tr>
             </tbody>
